force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Pipeline_Stage__c/sf_devops__Pipeline_Stage__c.object-meta.xml
<CustomObject>
    <description>Represents one stage in the overall pipeline.  This will join an Environment with a branch in the VCS.</description>
    <label>Pipeline Stage</label>
    <nameField>
        <label>Pipeline Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pipeline Stages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>