force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Pipeline_Stage__c/fields/sf_devops__Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Branch_Name__c</fullName>
    <description>This field is deprecated and should not be referenced</description>
    <label>Branch Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>