force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Pipeline_Stage__c/fields/sf_devops__Environment__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Environment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The environment this stage is associated with.</description>
    <label>Environment</label>
    <referenceTo>sf_devops__Environment__c</referenceTo>
    <relationshipLabel>Pipeline Stages</relationshipLabel>
    <relationshipName>Pipeline_Stages</relationshipName>
    <type>Lookup</type>
</CustomField>