force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Pipeline_Stage__c/fields/sf_devops__Pipeline__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Pipeline__c</fullName>
    <description>The pipeline this stage belongs to</description>
    <label>Pipeline</label>
    <referenceTo>sf_devops__Pipeline__c</referenceTo>
    <relationshipLabel>Pipeline Stages</relationshipLabel>
    <relationshipName>Pipeline_Stages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>