force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Pipeline_Stage__c/fields/sf_devops__Prerelease__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Prerelease__c</fullName>
    <description>The last non-versioned stage in the pipeline that is used to create a version.</description>
    <formula>AND( NOT( sf_devops__Versioned__c ) ,  sf_devops__Next_Stage__r.sf_devops__Versioned__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prerelease</label>
    <type>Checkbox</type>
</CustomField>