force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Pipeline_Stage__c/fields/sf_devops__Promote_Review_Remote_Reference__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Promote_Review_Remote_Reference__c</fullName>
    <label>Promote Review Remote Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>