force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Pipeline_Stage__c/fields/sf_devops__Swap_Status__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Swap_Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Feedback for the asynchronous swap operation that is happening on this stage.</description>
    <label>Swap Status</label>
    <referenceTo>sf_devops__Async_Operation_Result__c</referenceTo>
    <relationshipLabel>Pipeline Stage Swaps</relationshipLabel>
    <relationshipName>Pipeline_Stage_Swaps</relationshipName>
    <type>Lookup</type>
</CustomField>