force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Pipeline_Stage__c/validationRules/sf_devops__Promote_Review_Url_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>sf_devops__Promote_Review_Url_Required</fullName>
    <active>false</active>
    <description>This rule is no longer enforced</description>
    <errorConditionFormula>FALSE</errorConditionFormula>
    <errorMessage>Deprecated</errorMessage>
</ValidationRule>